# axum-jwks

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: release-please.yml  rust.yml
axum-jwks/: CHANGELOG.md  Cargo.toml
axum-jwks/src/: claims.rs  jwks.rs  key_manager.rs  key_store.rs  lib.rs  token.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: auth.rs  main.rs
src/: default_claims.rs  empty_claims.rs  jwks.rs  lib.rs  token.rs
