[package]
name = "auth0-axum"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
