[package]
name = "auth0-axum"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
jsonwebtoken = { version = "8", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }
tracing = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
