[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
axum = "0.7"
axum-jwks = { path = "../../axum-jwks", features = ["axum_0_7"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
