[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
axum = "0.8"
axum-jwks = { path = "../../axum-jwks" }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tracing-subscriber = "0.3.19"
